| Summary: | ASTERISK-28194: chan_sip: Leak using contact ACL | ||
| Reporter: | Giuseppe Sucameli (gsucameli) | Labels: | |
| Date Opened: | 2018-12-04 17:56:20.000-0600 | Date Closed: | 2018-12-10 07:06:21.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 13.12.2 13.18.4 13.21.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | There's a leak using peer's contact ACL.
Every time the {{build_peer()}} method is called (es. during a SIP module reload) the {{peer->contactacl}} that contains the contact ACL is overwritten without destroying the previous list. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-12-04 17:56:22.328-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-12-10 07:06:21.997-0600 Change 10748 merged by Joshua C. Colp: chan_sip: Fix leak using contact ACL [https://gerrit.asterisk.org/10748|https://gerrit.asterisk.org/10748] By: Friendly Automation (friendly-automation) 2018-12-10 07:06:31.431-0600 Change 10749 merged by Joshua C. Colp: chan_sip: Fix leak using contact ACL [https://gerrit.asterisk.org/10749|https://gerrit.asterisk.org/10749] By: Friendly Automation (friendly-automation) 2018-12-10 07:06:41.191-0600 Change 10742 merged by Joshua C. Colp: chan_sip: Fix leak using contact ACL [https://gerrit.asterisk.org/10742|https://gerrit.asterisk.org/10742] | ||